5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4126/executions/1637_1055.log
== SUBMITION (2019-04-15 19:30:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v = float(input("velo:"))
a = radians(float(input("ang:")))
d = abs(float(input("dist:")))
g = 9.8
r = ((v)**2 * sin(2*a))/g
if (r >= d -0.1):
	print("sin"):
else:
	print("nao")
-- EXECUTION TIME:
0.154749
-- ERROR:
  File "/home/codebench/codes/1637/1055/main.py", line 11
    print("sin"):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:31:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v = float(input("velo:"))
a = radians(float(input("ang:")))
d = abs(float(input("dist:")))
g = 9.8
r = ((v)**2 * sin(2*a))/g
if (r >= d -0.1):
	print("sim"):
else:
	print("nao")
-- EXECUTION TIME:
0.145284
-- ERROR:
  File "/home/codebench/codes/1637/1055/main.py", line 11
    print("sim"):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:32:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v = float(input("velo:"))
a = radians(float(input("ang:")))
d = abs(float(input("dist:")))
g = 9.8
r = ((v)**2 * sin(2*a))/g
if (r >= d -0.1):
	print("sim"):
else:
	print("nao")
-- ERROR:
File "XXXX", line 11
    print("sim"):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:32:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
v = float(input("velo:"))
a = radians(float(input("ang:")))
d = abs(float(input("dist:")))
g = 9.8
r = ((v)**2 * sin(2*a))/g
if (r >= d -0.1):
	print("sim")
else:
	print("nao")
-- EXECUTION TIME:
0.146817
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
